fix spacing

--- a/src/css/banner.css
+++ b/src/css/banner.css
@@ -18,7 +18,7 @@ line-height: 25pt;
 @keyframes blink {
     0%, 15% {
         opacity: .3;
-        color:rgb(255, 136, 0);
+        color:rgb(255, 102, 0);
     }
     16%, 100% {
         opacity: 1;
@@ -31,7 +31,7 @@ line-height: 25pt;
     transform: translateX(100%);
     animation: scroll-left 20s linear infinite;
     font-family: 'Athiti';
-    margin-top: 2%;
+    margin-top: 1%;
     font-size: 9pt;
     line-height: 13pt;
 
