--- a/src/css/dropdown.css
+++ b/src/css/dropdown.css
@@ -1,13 +1,13 @@
 #bar {
-  width: 25px;
+  width: 27px;
   height: 2px;
   background-color: rgba(0, 89, 255, 0.599);
-  margin:5px 0;
+  margin:5px ;
 }
 
 .MenuIcon {
-    width:100%;
-    display:inline;
+    display:inline-block;
+
 }
 
 .wholeContainer a {
@@ -20,11 +20,11 @@
 }
 
 .wholeContainer {
-    background-color: transparent;
-    height:25pt;
-        padding-left: 92%;
-padding-top: 3%;
-    width: 100%;
+    width: 98%;
  position: fixed;
+ display:inline-block;
+ align-items: center;
+ background-color: transparent;
     z-index: 9998!important;
+    text-align: right;
 }
